<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_CheckOperation" Id="{8705b537-706d-4801-b262-e6d5a3b0b4d3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CheckOperation
VAR
	
	StartTimer : TON;
	TimerDone : BOOL;
	
	Counter : CTU; 
	ResetCommand : BOOL; 
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[StartTimer(IN:= GVL.OperationStart , PT:= T#2S);
TimerDone := StartTimer.Q; 

IF TimerDone THEN  
	gvl.LoadMeasurementStart := TRUE;
ELSE
	gvl.LoadMeasurementWait := TRUE;
END_IF

//Counter(
	//CU:=TimerDone , 
	//RESET:= ResetCommand , 
	//PV:= 5); 


]]></ST>
    </Implementation>
    <LineIds Name="FB_CheckOperation">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="21" Count="4" />
      <LineId Id="20" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>